feat: add more technical skills

--- a/resume.tex
+++ b/resume.tex
@@ -35,8 +35,8 @@
 \begin{rSection}{SKILLS}
 
 	\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} p{40em} l }
-		Technical Skills & C++, Rust, Java, Node.js, Python, TypeScript, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Svelte, React, TensorFlow, PyTorch, Pandas, NumPy \\
-		Soft Skills      & Communication, Teamwork, Adaptability, Patience, Critical Thinking, Time Management, Accountability                                            \\
+		Technical Skills & C++, Rust, Java, Node.js, Python, TypeScript, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Svelte, React, TensorFlow, PyTorch, Pandas, NumPy, Google Cloud, AWS \\
+		Soft Skills      & Communication, Teamwork, Adaptability, Patience, Critical Thinking, Time Management, Accountability                                                               \\
 	\end{tabular}
 \end{rSection}
 % END Skills section
@@ -59,8 +59,6 @@
 	\vspace{-1.25em}
 
 	\item \textbf{Remote Message Archiving Tool:} {Built a multi-threaded tool to download all chat messages from specified Twitch videos by using \textbf{Rust}, \textbf{PostgreSQL}, and \textbf{Prisma}. It can archive 5,000,000+ messages per hour depending on network speed. Releases are automatically created and binaries are automatically built for MacOS, Linux, and Windows when a tag is pushed, improving iteration time by over 50\%.}
-
-	\item \textbf{Programming Language:} {Created an \textbf{interpreter} for a proprietary programming language with \textbf{Rust} and \textbf{clap}.}
 
 	\item \textbf{Stock Market Predictor:} {Built a \textbf{neural network} that analyzes historical time-series data and predicts the price of the stock for the following day. Created with \textbf{TypeScript} and \textbf{TensorFlow}.}
 
