--- a/resume.tex
+++ b/resume.tex
@@ -35,8 +35,8 @@
 \begin{rSection}{SKILLS}
 
 	\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} p{40em} l }
-		Technical Skills & C++, Rust, Java, Node.js, Python, TypeScript, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Svelte, React, TensorFlow, PyTorch, Pandas, NumPy, Google Cloud, AWS \\
-		Soft Skills      & Communication, Teamwork, Adaptability, Patience, Critical Thinking, Time Management, Accountability                                                               \\
+		Technical Skills & C++, Rust, Java, Node.js, Python, TypeScript, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Svelte, React, Flutter, TensorFlow, PyTorch, Pandas, NumPy, AWS \\
+		Soft Skills      & Communication, Teamwork, Adaptability, Patience, Critical Thinking, Time Management, Accountability                                                          \\
 	\end{tabular}
 \end{rSection}
 % END Skills section
