--- a/resume.tex
+++ b/resume.tex
@@ -21,40 +21,40 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \color{white} \name{Matthew Polak}
 \address{+1 (519) 362-9413 \\ Ontario, Canada}
-\address{\href{mailto:me@matteopolak.com}{me@matteopolak.com} \\ \href{https://matteopolak.com}{matteopolak.com} \\ \href{https://github.com/matteopolak}{github.com/matteopolak}\vspace{3.5em}}
+\address{\underline{\href{mailto:me@matteopolak.com}{me@matteopolak.com}} \\ \underline{\href{https://matteopolak.com}{matteopolak.com}} \\ \underline{\href{https://github.com/matteopolak}{github.com/matteopolak}}\vspace{3.5em}}
 
 \begin{document}
 \color{primary}
 
 % Education section
 \begin{rSection}{EDUCATION}
-	{\textbf{Honours Bachelor of Computer Science}}, University of Ottawa \hfill {Expected 2026}
+	{\textbf{Co-op Honours Bachelor of Computer Science}}, University of Ottawa \hfill \textit{Expected 2026}
+	\begin{flushright}
+		{Looking for a \textbf{May 2024}, 4-month position}
+	\end{flushright}
 \end{rSection}
 
 % Skills section
-\begin{rSection}{SKILLS}
-	\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} p{40em} l }
-		Technical Skills & C++, Rust, Java, Node.js, Python, TypeScript, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Svelte, React, Flutter, TensorFlow, PyTorch, Pandas, NumPy, AWS \\
-		Soft Skills      & Communication, Teamwork, Adaptability, Patience, Critical Thinking, Time Management, Accountability                                                          \\
-	\end{tabular}
+\begin{rSection}{TECHNICAL SKILLS}
+	Rust, TypeScript, Python, Java, C++, C, Go, C\#, Groovy, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Redis, Memcached, OpenStack, Svelte, Vue, React, SvelteKit, Vite, Nuxt, Flutter, Express.js, Fastify, Axum, Actix Web, JSONSchema, OpenAPI, Swagger, Prisma, TypeORM, Diesel, Serde, Skia
 \end{rSection}
 
 % Experience section
 \begin{rSection}{PROFESSIONAL EXPERIENCE}
-	\textbf{Software Developer} \hfill May 2023 - Sept 2023 \\ Ciena \hfill \textit{Ottawa, ON}
+	\textbf{Development Engineer} \hfill May 2023 - Sept 2023 \\ Ciena \hfill \textit{Ottawa, ON}
 
 	\begin{itemize}
 		\itemsep -3pt {}
-		\item Streamlined the development of the 6500 Packet-Optical Platform by 20\% using \textbf{Python}.
-		\item Developed new features with \textbf{C++} and \textbf{Groovy} to improve the performance by 10\%.
-		\item Achieved a 15\% faster development cycle by improving the build pipeline.
+		\item Created an API with \textbf{express}, \textbf{zod}, \textbf{Node.js}, and \textbf{MongoDB} that improved workflow efficiency by 20\%.
+		\item Developed a log query tool with \textbf{Flask}, \textbf{Vue}, and \textbf{TailwindCSS} that increased debugging efficiency by 30\%.
+		\item Upgraded and improved a virtual machine management tool with \textbf{Python}, \textbf{OpenStack}, and \textbf{Jenkins} that reduced downtime and failures by 15\%.
 	\end{itemize}
 
 	\textbf{STEM Instructor} \hfill Jun 2022 - Oct 2022 \\ RoboEDU \hfill \textit{North York, ON}
 
 	\begin{itemize}
 		\itemsep -3pt {}
-		\item Led students through courses at a 20\% faster pace whilst retaining knowledge.
+		\item Led students through \textbf{Python} and Scratch courses.
 		\item Developed new course material which led to a 25\% improvement in student retention.
 		\item Achieved a 15\% higher average rating using interpersonal skills and technological knowledge.
 	\end{itemize}
@@ -64,23 +64,21 @@
 \begin{rSection}{PROJECTS}
 	\vspace{-1.25em}
 
-	\item \textbf{Remote Message Archiving Tool:} {Built a multi-threaded tool to download all chat messages from specified Twitch videos by using \textbf{Rust}, \textbf{PostgreSQL}, and \textbf{Prisma}. It can archive 5,000,000+ messages per hour depending on network speed. Releases are automatically created and binaries are automatically built for MacOS, Linux, and Windows when a tag is pushed, improving iteration time by over 50\%.}
+	\item \textbf{RecipeNLG Index:} {Indexed 2,000,000+ recipes into the full-text search engine \textbf{Meilisearch} and wrote a \textbf{Vue 3} + \textbf{Nuxt 3} frontend for the application}
 
-	\item \textbf{Discord Music Player:} {Built a bot with \textbf{TypeScript}, \textbf{Prisma}, and the \textbf{Discord API} that hosts listen-along sessions for users, with an extensive feature-set with persistent queues managed by \textbf{MongoDB}, audio filters with \textbf{FFmpeg}, and much more.}
+	\item \textbf{Remote Message Archiving Tool:} {Built a multi-threaded tool to download all chat messages from specified Twitch videos by using \textbf{Rust}, \textbf{PostgreSQL}, and \textbf{Prisma}. It can archive 5,000,000+ messages per hour depending on network speed. Releases are automatically created and binaries are automatically built for MacOS, Linux, and Windows when a tag is pushed, improving iteration time by over 50\%.}
 
 	\item \textbf{Personal Website:} {Created a personal portfolio website with \textbf{TypeScript}, \textbf{Svelte}, and \textbf{Vite}. It is automatically deployed and hosted on \textbf{Cloudflare Pages}, serving over 5,000 requests per month.}
 
-	\item \textbf{Minecraft Name Index:} {Built a \textbf{SvelteKit} website with a \textbf{Rust} backend that indexes all Minecraft usernames and allows users to search for them. It is hosted on \textbf{Cloudflare Pages} and uses \textbf{PostgreSQL} for data storage.}
-
-	\item \textbf{Chat Message Generation Model:} {Built a \textbf{recurrent neural network} that generates chat messages based on a dataset of username and chat message pairs. Uses \textbf{Pandas} for CSV parsing, \textbf{TensorFlow} for model training, \textbf{NumPy} for data input/output, and \textbf{argparse} for command-line argument parsing.}
-
 \end{rSection}
 
-% Extra-curricular section
-\begin{rSection}{Extra-Curricular Activities}
+% Achievements section
+\begin{rSection}{Achivements}
 	\begin{itemize}
-		\item	Compete in hackathons, 2023 Hack the Hill winner.
-		\item	Compete in coding competitions, 2022 Skills Ontario Coding Competition winner.
+		\item	2023 \underline{\href{https://hack-the-hill.devpost.com}{Hack the Hill}} Hackathon, 1st
+		\item 2023 \underline{\href{https://all-in-hackathon.devpost.com/}{MLH x \textbraceleft all in\textbraceright}} Hackathon, 1st
+		\item 2023 \underline{\href{https://maphacks-2.devpost.com}{MapHacks 2}} Hackathon, 1st
+		\item	2022 Skills Ontario Coding Competition, 1st
 	\end{itemize}
 \end{rSection}
 
