feat: add new projects, change ciena description

--- a/resume.tex
+++ b/resume.tex
@@ -26,58 +26,86 @@
 \begin{document}
 \color{primary}
 
+\vspace{-8pt}
+
 % Education section
 \begin{rSection}{EDUCATION}
 	{\textbf{Co-op Honours Bachelor of Computer Science}}, University of Ottawa \hfill \textit{Expected 2026}
+	\vspace{-8pt}
 	\begin{flushright}
 		{Looking for a \textbf{May 2024}, 4-month position}
 	\end{flushright}
 \end{rSection}
 
+\vspace{-8pt}
+
 % Skills section
 \begin{rSection}{TECHNICAL SKILLS}
-	Rust, TypeScript, Python, Java, C++, C, Go, C\#, Groovy, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Redis, Memcached, OpenStack, Svelte, Vue, React, SvelteKit, Vite, Nuxt, Flutter, Express.js, Fastify, Axum, Actix Web, JSONSchema, OpenAPI, Swagger, Prisma, TypeORM, Diesel, Serde, Skia
+	Rust, TypeScript, Python, Java, C++, C, Go, C\#, Groovy, PostgreSQL, MySQL, MariaDB, MongoDB, Firebase, Redis, Memcached, OpenStack, Svelte, Vue, React, SvelteKit, Vite, Nuxt, Flutter, Express.js, Fastify, Axum, Actix Web, JSONSchema, OpenAPI, Swagger, Prisma, Diesel, Serde, Skia
 \end{rSection}
+
+\vspace{-8pt}
 
 % Experience section
 \begin{rSection}{PROFESSIONAL EXPERIENCE}
-	\textbf{Development Engineer} \hfill May 2023 - Sept 2023 \\ Ciena \hfill \textit{Ottawa, ON}
+	\textbf{Development Engineer} \hfill May 2023 - Sept 2023 \\ Ciena \hfill \textit{Ottawa, ON (Remote)}
 
 	\begin{itemize}
-		\itemsep -3pt {}
-		\item Created an API with \textbf{express}, \textbf{zod}, \textbf{Node.js}, and \textbf{MongoDB} that improved workflow efficiency by 20\%.
-		\item Developed a log query tool with \textbf{Flask}, \textbf{Vue}, and \textbf{TailwindCSS} that increased debugging efficiency by 30\%.
-		\item Upgraded and improved a virtual machine management tool with \textbf{Python}, \textbf{OpenStack}, and \textbf{Jenkins} that reduced downtime and failures by 15\%.
+		\itemsep -4pt {}
+		\item Created a code ownership API with \textbf{Express.js}, \textbf{zod}, \textbf{Node.js}, and \textbf{MongoDB} that improved workflow efficiency by 20\%.
+		\item Developed a log query tool with \textbf{Flask}, \textbf{Vue}, and \textbf{Tailwind} that increased debugging efficiency by 30\%.
+		\item Upgraded and improved a computing management tool with \textbf{Python}, \textbf{OpenStack}, and \textbf{Jenkins} that reduced downtime and failures by 15\%.
+		\item Created a full-stack computing resource booking platform with \textbf{Vue}, \textbf{Nuxt}, \textbf{PostgreSQL}, and \textbf{tRPC} that reduced resource conflicts by 20\%.
 	\end{itemize}
 
-	\textbf{STEM Instructor} \hfill Jun 2022 - Oct 2022 \\ RoboEDU \hfill \textit{North York, ON}
+	\textbf{STEM Instructor} \hfill Jun 2022 - Oct 2022 \\ RoboEDU \hfill \textit{North York, ON (Remote)}
 
 	\begin{itemize}
-		\itemsep -3pt {}
-		\item Led students through \textbf{Python} and Scratch courses.
-		\item Developed new course material which led to a 25\% improvement in student retention.
-		\item Achieved a 15\% higher average rating using interpersonal skills and technological knowledge.
+		\itemsep -4pt {}
+		\item Developed course material and led students through \textbf{Python} and Scratch courses to teach the fundamentals of programming.
+		\item Formulated a teaching plan to increase student productivity and engagement by 20\%.
 	\end{itemize}
 \end{rSection}
+
+\vspace{-8pt}
 
 % Projects section
 \begin{rSection}{PROJECTS}
-	\vspace{-1.25em}
+	\textbf{StatPixel} \textit{Rust, PostgreSQL, Redis, Skia}
+	\vspace{-8pt}
+	\begin{itemize}
+		\itemsep -6pt {}
+		\item Developed an application to track and visualize player statistics for Minecraft.
+		\item Built an image generation pipeline with \textbf{Skia} to generate dynamic images.
+		\item Created 2,000+ leaderboards with \textbf{Redis} and \textbf{PostgreSQL} to efficiently retrieve top performers.
+	\end{itemize}
 
-	\item \textbf{RecipeNLG Index:} {Indexed 2,000,000+ recipes into the full-text search engine \textbf{Meilisearch} and wrote a \textbf{Vue 3} + \textbf{Nuxt 3} frontend for the application}
+	\textbf{Noteboard} \textit{Svelte, TypeScript, PostgreSQL, tRPC, WebSocket}
+	\vspace{-8pt}
+	\begin{itemize}
+		\itemsep -6pt {}
+		\item Created a music-based collaborative drawing tool with the \textbf{Canvas API}.
+		\item Synchronized drawing data with \textbf{WebSocket} and \textbf{tRPC} for real-time updates.
+		\item Developed a chunking algorithm to reduce bandwidth and reduce latency.
+	\end{itemize}
 
-	\item \textbf{Remote Message Archiving Tool:} {Built a multi-threaded tool to download all chat messages from specified Twitch videos by using \textbf{Rust}, \textbf{PostgreSQL}, and \textbf{Prisma}. It can archive 5,000,000+ messages per hour depending on network speed. Releases are automatically created and binaries are automatically built for MacOS, Linux, and Windows when a tag is pushed, improving iteration time by over 50\%.}
-
-	\item \textbf{Personal Website:} {Created a personal portfolio website with \textbf{TypeScript}, \textbf{Svelte}, and \textbf{Vite}. It is automatically deployed and hosted on \textbf{Cloudflare Pages}, serving over 5,000 requests per month.}
-
+	\textbf{Twitch Chat Downloader} \textit{Rust, PostgreSQL, Prisma, Iced}
+	\vspace{-8pt}
+	\begin{itemize}
+		\itemsep -6pt {}
+		\item Developed a tool with \textbf{Rust} to download Twitch chat logs at 5,000,000+ messages per hour.
+		\item Created a GUI with \textbf{Iced} to allow users to easily search for streams and download logs.
+		\item Built a database schema with \textbf{Prisma} to store and query chat logs.
+	\end{itemize}
 \end{rSection}
 
 % Achievements section
-\begin{rSection}{Achivements}
+\begin{rSection}{Achievements}
 	\begin{itemize}
-		\item	2023 \underline{\href{https://hack-the-hill.devpost.com}{Hack the Hill}} Hackathon, 1st
+		\itemsep -6pt {}
+		\item	2023 \underline{\href{https://hack-the-hill.devpost.com}{Hack the Hill}} Hackathon, 1st (Ciena track), Best Developer Experience, Best Cybersecurity Project
 		\item 2023 \underline{\href{https://all-in-hackathon.devpost.com/}{MLH x \textbraceleft all in\textbraceright}} Hackathon, 1st
-		\item 2023 \underline{\href{https://maphacks-2.devpost.com}{MapHacks 2}} Hackathon, 1st
+		\item 2023 \underline{\href{https://maphacks-2.devpost.com}{MapHacks 2}} Hackathon, 1st, Best Sustainable Travel Hack
 		\item	2022 Skills Ontario Coding Competition, 1st
 	\end{itemize}
 \end{rSection}
