feat: add crave project

--- a/resume.tex
+++ b/resume.tex
@@ -46,17 +46,17 @@
 
 % Skills section
 \begin{rSection}{TECHNICAL SKILLS}
-	Programming (Rust, TypeScript, Go, Python, Java, C++, C, C\#, Groovy),
-	Databases (PostgreSQL, MySQL, MongoDB, Firebase, Redis, Memcached),
-	Vector Databases (Qdrant, pgvector)
-	Frontend (Svelte, Vue, React, SvelteKit, Nuxt, GSAP (GreenSock), Flutter),
-	Web Servers (Express.js, Fastify, Axum, tRPC),
-	Specifications (JSONSchema, OpenAPI, Swagger, Zod),
-	ORM (Prisma, Diesel, SQLx),
-	Machine Learning (TensorFlow, Keras),
-	Tools (Gerrit, Jira, Confluence)
+	Rust, TypeScript, Go, Python, Java, C++, C, C\#, Groovy,
+	PostgreSQL, MySQL, MongoDB, Firebase, Redis, Memcached,
+	Qdrant,
+	InfluxDB, TimescaleDB,
+	Svelte, Vue, React, SvelteKit, Nuxt, GSAP (GreenSock), Flutter,
+	Express.js, Fastify, Axum, tRPC,
+	JSONSchema, OpenAPI, Swagger, Zod,
+	Prisma, Diesel, SQLx,
+	TensorFlow, Keras,
 	Gerrit, Jira, Confluence,
-	Skia, OpenStack
+	Skia, OpenStack, Docker
 \end{rSection}
 
 \vspace{-8pt}
@@ -109,12 +109,12 @@
 
 	\vspace{-4pt}
 
-	\href{https://github.com/matteopolak/noteboard}{\underline{\textit{Noteboard}}} \textbf{Svelte, TypeScript, PostgreSQL, tRPC, WebSocket}
+	\href{https://github.com/matteopolak/crave}{\underline{\textit{Crave}}} \textbf{Svelte, TypeScript, PostgreSQL, tRPC, Drizzle, PyTorch}
 	\vspace{-8pt}
 	\begin{itemize}
 		\itemsep -6pt {}
-		\item Created a music-based collaborative drawing tool with the \textbf{Canvas API}.
-		\item Synchronized drawing data with \textbf{WebSocket}s and \textbf{tRPC} for real-time updates.
+		\item Created a recipe-sharing platform with personalized recommendations and a social feed.
+		\item Integrated BGE v1.5 with \textbf{PyTorch} and \textbf{Flask} to vectorize and rank recipes.
 		\item Implemented a user-friendly interface with \textbf{DaisyUI} and \textbf{TailwindCSS}.
 	\end{itemize}
 \end{rSection}
