feat: add more skills

--- a/resume.tex
+++ b/resume.tex
@@ -35,9 +35,9 @@
 	{Looking for a \textbf{May 2024}, 4-month position}
 \end{flushright}
 \sectionlineskip
-\hrule % Horizontal line
-\begin{list}{}{ % List for each individual item in the section
-		\setlength{\leftmargin}{0em} % Margin within the section
+\hrule
+\begin{list}{}{
+		\setlength{\leftmargin}{0em}
 	}
 	\item[] \textbf{Co-op Honours Bachelor of Computer Science}, University of Ottawa \hfill \textit{Expected 2026}
 \end{list}
@@ -50,13 +50,15 @@
 	PostgreSQL, MySQL, MongoDB, Firebase, Redis, Memcached,
 	Qdrant,
 	InfluxDB, TimescaleDB,
-	Svelte, Vue, React, SvelteKit, Nuxt, GSAP (GreenSock), Flutter,
+	Svelte, Vue, React, SvelteKit, Nuxt, Next.js,
+	GSAP (GreenSock), Flutter,
 	Express.js, Fastify, Axum, tRPC,
 	JSONSchema, OpenAPI, Swagger, Zod,
 	Prisma, Diesel, SQLx,
 	TensorFlow, Keras,
 	Gerrit, Jira, Confluence,
-	Skia, OpenStack, Docker
+	Skia, OpenStack, Docker,
+	Git, Gerrit
 \end{rSection}
 
 \vspace{-8pt}
