feat: add skills

--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 	Express.js, Fastify, Axum, tRPC,
 	JSONSchema, OpenAPI, Swagger, Zod,
 	Prisma, Diesel, SQLx,
-	TensorFlow, Keras,
+	PyTorch, TensorFlow, Keras,
 	Gerrit, Jira, Confluence,
 	Skia, OpenStack, Docker,
 	Git, Gerrit
