feat: quasi -> basket

--- a/resume.tex
+++ b/resume.tex
@@ -50,14 +50,16 @@
 	PostgreSQL, MySQL, MongoDB, Firebase, Redis, Memcached,
 	Qdrant,
 	InfluxDB, TimescaleDB,
+	JavaScript, HTML, CSS,
 	Svelte, Vue, React, SvelteKit, Nuxt, Next.js,
 	GSAP (GreenSock), Flutter,
 	Express.js, Fastify, Axum, tRPC,
 	JSONSchema, OpenAPI, Swagger, Zod,
-	Prisma, Diesel, SQLx,
+	Drizzle, Diesel,
 	PyTorch, TensorFlow, Keras,
 	Gerrit, Jira, Confluence,
-	Skia, OpenStack, Docker,
+	Skia, wgpu, OpenStack, Docker,
+	Unity, Bevy,
 	Git, Gerrit
 \end{rSection}
 
@@ -88,25 +90,25 @@
 
 % Projects section
 \begin{rSection}{PROJECTS}
-	\href{https://github.com/statpixel-rs/statpixel}{\underline{\textit{StatPixel}}} \textbf{Rust, PostgreSQL, Redis, Skia}
+	\href{https://github.com/statpixel-rs/statpixel}{\underline{\textit{StatPixel}}} \textbf{Rust, PostgreSQL, Redis, Skia, wgsl}
 	\vspace{-8pt}
 	\begin{itemize}
 		\itemsep -6pt {}
 		\item Developed an application to track and visualize player statistics for Minecraft.
 		\item Built an \textbf{image generation} pipeline with \textbf{Skia} to generate dynamic images.
 		\item Created 2,000+ leaderboards with \textbf{Redis} and \textbf{PostgreSQL} to efficiently retrieve top performers.
-		\item Leveraged \textbf{code generation} with \textbf{proc-macro}s to reduce boilerplate and improve performance.
+		\item Leveraged \textbf{code generation} to reduce boilerplate and improve performance.
 	\end{itemize}
 
 	\vspace{-4pt}
 
-	\href{https://github.com/matteopolak/quasi}{\underline{\textit{Quasi}}} \textbf{Rust, AST, Interpreter}
+	\href{https://github.com/matteopolak/basket}{\underline{\textit{Basket}}} \textbf{Rust, HTTP}
 	\vspace{-8pt}
 	\begin{itemize}
 		\itemsep -6pt {}
-		\item Wrote a programming language with expressions, functions, and control flow.
-		\item Implemented a \textbf{recursive descent parser} to generate an \textbf{abstract syntax tree}.
-		\item Created an \textbf{interpreter} to execute the AST and evaluate expressions.
+		\item Implemented the HTTP/1.1 protocol with \textbf{Rust} to handle requests and responses.
+		\item Created an HTTP client from scratch using \textbf{TCP} sockets.
+		\item Developed a multi-threaded HTTP server with built-in routing support.
 	\end{itemize}
 
 	\vspace{-4pt}
